--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     });//]]>
     </script>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y0B0SQCD36"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W0CGWTBPVZ"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Y0B0SQCD36');
+  gtag('config', 'G-W0CGWTBPVZ');
 </script>
 
     <script>
